--- a/cloudrouter.yaml
+++ b/cloudrouter.yaml
@@ -5,7 +5,7 @@ resources:
 - name: my-cloud-router
   type: https://raw.githubusercontent.com/suvenkat79/google/master/cloud_router.jinja
   properties:
-    region: us-west1-b
+    region: us-west1-a
     peerAddress: 1.2.3.4
     asn: 65001
     sharedSecret: LosPajarosLolos
